k8s/mongodb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  serviceName: "mongodb-service"
  replicas: 3
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - mongodb
              topologyKey: "kubernetes.io/hostname"
      containers:
      - name: mongodb
        image: mongo:6.0
        command:
          - "sh"
          - "-c"
          - |
            [...]
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "400Mi"
        ports:
        - containerPort: 27017
      - name: mongodb-exporter
        image: bitnami/mongodb-exporter:latest
        args:
          - --collect-all
        ports:
          - containerPort: 9216
            name: metrics
        resources:
          requests:
            cpu: "20m"
            memory: "50Mi"
          limits:
            cpu: "50m"
            memory: "100Mi"
  volumeClaimTemplates:
  - metadata:
      name: mongo-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "gp3" 
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  clusterIP: None # Headless service cho StatefulSet
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
