k8s/monitoring-external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-dns
  namespace: default
spec:
  type: ExternalName
  externalName: grafana-service.monitoring.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-dns
  namespace: default
spec:
  type: ExternalName
  externalName: prometheus-service.monitoring.svc.cluster.local
